--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyrogram==2.0.106
-git+https://github.com/pyrogram/tgcrypto.git
+git+https://github.com/pyrogram/pyrogram
+git+https://github.com/pyrogram/tgcalls
 pytgcalls==0.5.2
 
