--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 pyrogram==2.0.106
-pytgcalls @ git+https://github.com/pytgcalls/pytgcalls.git
+py-tgcalls @ git+https://github.com/pytgcalls/pytgcalls.git
 TgCrypto
